log
Thu 05 Oct 2023 01:31:07 AM UTC: 
 tests:  0|5
total_score: 0/70
5a37541
Thu 05 Oct 2023 04:51:15 AM UTC: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:9: error: invalid use of incomplete typedef ‘List’
   55 |     list->head = NULL;
      |         ^~
Compilation failed
35acbcd
Fri 06 Oct 2023 11:29:09 PM UTC: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:55:3: error: expected ‘,’ or ‘;’ before ‘return’
   55 |   return list;
      |   ^~~~~~
sudoku.c:54:9: error: unused variable ‘list’ [-Werror=unused-variable]
   54 |   List* list = createList()
      |         ^~~~
sudoku.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e745afb
Fri 06 Oct 2023 11:29:30 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
1447f1d
